[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/saw/saw.png" type="Texture" id=1]
[ext_resource path="res://assets/art/saw/saw_floor.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Saw.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/sfx/saw_sound.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SawSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SawSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "off"
tracks/0/type = "value"
tracks/0/path = NodePath("SawSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_left"
length = 4.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -50, -1 ), Vector2( -36, -33 ), Vector2( 0, -33 ), Vector2( 37, -33 ), Vector2( 51, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SawSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -50, -1 ), Vector2( -36, -33 ), Vector2( 0, -33 ), Vector2( 37, -33 ), Vector2( 51, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SawSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0, 1080.0, 1440.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("SawSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=1]
radius = 33.0151

[node name="Saw" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -53.0 ],
"_edit_vertical_guides_": [ -69.0, 70.0, -83.0, 84.0 ]
}

[node name="SawSprite" type="Sprite" parent="."]
rotation = 6.28319
z_index = -3
z_as_relative = false
texture = ExtResource( 1 )

[node name="SawFloorSprite" type="Sprite" parent="."]
position = Vector2( 0, -37 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/RESET = SubResource( 2 )
anims/off = SubResource( 3 )
anims/run_left = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="SawSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -14.4

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1, -47 )
scale = Vector2( 7.2, 1.2 )

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
